Footer displayed correctly on mobile #25

--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -6,7 +6,14 @@
 
 .footerCol {
   padding: 30px;
-  width: 30%;
+  min-width: 30%;
+  max-width: 30%;
+}
+
+@media (max-width: 768px) {
+  .footerCol {
+    max-width: 60%;
+  }
 }
 
 .footerCol ul {
